<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eunice.mona.gwenwa.ForumActivity"
    android:background="#73A0FF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:id="@+id/relative_layout"
        android:paddingBottom="20dp">

        <ImageButton
            android:id="@+id/image_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/chat"
            android:background="@android:color/black"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_start_discussion_prompt"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/image_button1"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/relative_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_discussion_title"
            android:textSize="30dp"
            android:textStyle="bold"
            android:id="@+id/discussion_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_disussion_ongoing"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="80dp"
            android:paddingRight="10dp"
            android:hint="@string/forum_hint"
            android:inputType="text"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forum_post_button_text"
            android:textSize="30dp"
            android:textAllCaps="false"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button2"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="30dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
