<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.eunice.mona.gwenwa.InformationActivity"
    android:background="#73A0FF">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_prompt"
        android:textStyle="italic"
        android:paddingBottom="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="30dp"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp"
        android:paddingTop="30dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_price"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@android:color/black"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_Feeds"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@android:color/black"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_methods"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@android:color/black"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/info_schedule"
            android:textSize="30dp"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:background="@android:color/black"
            android:padding="8dp"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/button2"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:textSize="30dp"
            android:textColor="@android:color/white"/>

    </LinearLayout>

</RelativeLayout>
